--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,15 @@
-cmake_minimum_required(VERSION 3.11)
-project(car-dealer LANGUAGES CXX VERSION 1.0.0)
+cmake_minimum_required(VERSION 3.12)
+project(
+  car-dealer
+  LANGUAGES CXX
+  VERSION 1.0.0)
 
-# Specify the include directory
-include_directories(include)
 include_directories(dependencies/include include)
 
-# Specify the source files
-file(GLOB SOURCES
-    src/*.cpp
-)
-# Specify the library directory
-link_directories(dependencies/lib)
+file(GLOB SOURCES src/*.cpp)
 
-# Define the executable
 add_executable(car-dealer src/main.cpp)
 
-# Link against the FTXUI static library
-target_link_libraries(car-dealer
-  PRIVATE ftxui-screen
-  PRIVATE ftxui-dom
-  PRIVATE ftxui-component
-)
+find_package(ftxui REQUIRED)
+target_link_libraries(car-dealer PRIVATE ftxui::screen ftxui::dom
+                                         ftxui::component)
