--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,17 @@
 cmake_minimum_required(VERSION 3.12)
+
 project(
   car-dealer
   LANGUAGES CXX
   VERSION 1.0.0)
 
-include_directories(dependencies/include include)
+if(WIN32)
+  set(CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/Dependencies/win/")
+  include_directories(Dependencies/win/include include)
+elseif(UNIX)
+  set(CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/Dependencies/linux/")
+  include_directories(Dependencies/linux/include include)
+endif()
 
 file(GLOB SOURCES src/*.cpp)
 
